regression-tests/test-results/gcc-13/mixed-bugfix-for-ufcs-non-local.cpp.output
In file included from mixed-bugfix-for-ufcs-non-local.cpp:6:
../../../include/cpp2util.h:850:1: error: lambda-expression in template parameter type
  850 | [LAMBDADEFCAPT]< \
      | ^
../../../include/cpp2util.h:868:59: note: in expansion of macro ‘CPP2_UFCS_’
  868 | #define CPP2_UFCS_NONLOCAL(...)                           CPP2_UFCS_(,(),,__VA_ARGS__)
      |                                                           ^~~~~~~~~~
mixed-bugfix-for-ufcs-non-local.cpp2:13:12: note: in expansion of macro ‘CPP2_UFCS_NONLOCAL’
mixed-bugfix-for-ufcs-non-local.cpp2:13:36: error: template argument 1 is invalid
../../../include/cpp2util.h:850:1: error: lambda-expression in template parameter type
  850 | [LAMBDADEFCAPT]< \
      | ^
../../../include/cpp2util.h:868:59: note: in expansion of macro ‘CPP2_UFCS_’
  868 | #define CPP2_UFCS_NONLOCAL(...)                           CPP2_UFCS_(,(),,__VA_ARGS__)
      |                                                           ^~~~~~~~~~
mixed-bugfix-for-ufcs-non-local.cpp2:21:12: note: in expansion of macro ‘CPP2_UFCS_NONLOCAL’
mixed-bugfix-for-ufcs-non-local.cpp2:21:36: error: template argument 1 is invalid
../../../include/cpp2util.h:850:1: error: lambda-expression in template parameter type
  850 | [LAMBDADEFCAPT]< \
      | ^
../../../include/cpp2util.h:868:59: note: in expansion of macro ‘CPP2_UFCS_’
  868 | #define CPP2_UFCS_NONLOCAL(...)                           CPP2_UFCS_(,(),,__VA_ARGS__)
      |                                                           ^~~~~~~~~~
mixed-bugfix-for-ufcs-non-local.cpp2:31:12: note: in expansion of macro ‘CPP2_UFCS_NONLOCAL’
mixed-bugfix-for-ufcs-non-local.cpp2:31:36: error: template argument 1 is invalid
../../../include/cpp2util.h:850:1: error: lambda-expression in template parameter type
  850 | [LAMBDADEFCAPT]< \
      | ^
../../../include/cpp2util.h:868:59: note: in expansion of macro ‘CPP2_UFCS_’
  868 | #define CPP2_UFCS_NONLOCAL(...)                           CPP2_UFCS_(,(),,__VA_ARGS__)
      |                                                           ^~~~~~~~~~
mixed-bugfix-for-ufcs-non-local.cpp2:33:12: note: in expansion of macro ‘CPP2_UFCS_NONLOCAL’
mixed-bugfix-for-ufcs-non-local.cpp2:33:36: error: template argument 1 is invalid
../../../include/cpp2util.h:850:1: error: lambda-expression in template parameter type
  850 | [LAMBDADEFCAPT]< \
      | ^
../../../include/cpp2util.h:868:59: note: in expansion of macro ‘CPP2_UFCS_’
  868 | #define CPP2_UFCS_NONLOCAL(...)                           CPP2_UFCS_(,(),,__VA_ARGS__)
      |                                                           ^~~~~~~~~~
mixed-bugfix-for-ufcs-non-local.cpp2:21:12: note: in expansion of macro ‘CPP2_UFCS_NONLOCAL’
mixed-bugfix-for-ufcs-non-local.cpp2:21:36: error: template argument 1 is invalid
